--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@ body {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 20px;
     cursor: pointer;
+    margin-top: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow */
   }
 
